--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="project">
                     <div class="card">
                         <div class="overview">
-                            <h1>Weather App</h1>
+                            <h1>Multimedia</h1>
                             <div class="btns">
                                 <a href="https://github.com/poeticinspiired" target="_blank">
                                     <i class="fa-brands fa-github"></i>
@@ -145,7 +145,7 @@
                                 </a>
                             </div>
                         </div>
-                       <img src="./images/p3.png" alt="weatherapp_img">
+                       <img src="./images/p3.png" alt="Multimedia">
                     </div>
                 </div>
             </div>
